Minor alignment fixes

--- a/src/dataloaderinterface/static/dataloaderinterface/css/style.css
+++ b/src/dataloaderinterface/static/dataloaderinterface/css/style.css
@@ -280,7 +280,6 @@ div.registration-field span.control-label {
 .plot_box .variable-title {
     font-weight: 500;
     margin: 0;
-    margin-left: 6px;
 }
 
 .plot_box .mdl-card__supporting-text {
